--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,12 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #272829;
 }
 
 a {
-  color: #0563bb;
+  color: #ABC4FF;
   text-decoration: none;
 }
 
@@ -23,8 +23,12 @@ a:hover {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+h1, h2, h3, h4 {
+  font-family: "Poppins", sans-serif;
+}
+
+h5 {
+  font-family: 'Nanum Pen Script', cursive;
 }
 
 /*--------------------------------------------------------------
@@ -37,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0563bb;
+  background: #ABC4FF;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -45,12 +49,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 .back-to-top i {
   font-size: 28px;
-  color: #fff;
+  color: white;
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #0678e3;
-  color: #fff;
+  background: orange;
+  color: white;
 }
 .back-to-top.active {
   visibility: visible;
@@ -68,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #fff;
+  background: white;
 }
 
 #preloader:before {
@@ -76,9 +80,9 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #0563bb;
-  border-top-color: #fff;
-  border-bottom-color: #fff;
+  border: 6px solid #ABC4FF;
+  border-top-color: white;
+  border-bottom-color: white;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -127,7 +131,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 992px) {
   #header {
     width: 300px;
-    background: #fff;
+    background: white;
     border-right: 1px solid #e6e9ec;
     left: -300px;
   }
@@ -185,19 +189,19 @@ h1, h2, h3, h4, h5, h6 {
   }
   .nav-menu a span, .nav-menu a:focus span {
     display: none;
-    color: #fff;
+    color: white;
   }
 }
 .nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
-  color: #fff;
-  background: #0563bb;
+  color: white;
+  background: #ABC4FF;
 }
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {
-  color: #fff;
+  color: white;
 }
 .nav-menu a:hover, .nav-menu li:hover > a {
   width: 100%;
-  color: #fff;
+  color: white;
 }
 .nav-menu a:hover span, .nav-menu li:hover > a span {
   display: block;
@@ -232,8 +236,8 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
 }
 .mobile-nav-active .mobile-nav-toggle {
-  color: #fff;
-  background-color: #0563bb;
+  color: white;
+  background-color: #ABC4FF;
 }
 
 /*--------------------------------------------------------------
@@ -274,7 +278,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
 }
 #hero p span {
-  color: #0563bb;
+  color: #ABC4FF;
   letter-spacing: 1px;
 }
 #hero .social-links {
@@ -289,7 +293,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
 }
 #hero .social-links a:hover {
-  color: #0563bb;
+  color: #ABC4FF;
 }
 @media (max-width: 992px) {
   #hero {
@@ -343,7 +347,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #0563bb;
+  background: #ABC4FF;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -374,7 +378,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #0563bb;
+  color: #ABC4FF;
   line-height: 0;
 }
 .about .content p:last-child {
@@ -390,7 +394,7 @@ section {
   width: 100%;
   position: relative;
   text-align: center;
-  background: #fff;
+  background: white;
 }
 .facts .count-box i {
   position: absolute;
@@ -398,8 +402,8 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #0563bb;
-  color: #fff;
+  background: #ABC4FF;
+  color: white;
   border-radius: 50px;
   display: inline-flex;
   align-items: center;
@@ -416,7 +420,7 @@ section {
 .facts .count-box p {
   padding: 0;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 14px;
 }
 
@@ -449,7 +453,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #0563bb;
+  background-color: #ABC4FF;
 }
 
 /*--------------------------------------------------------------
@@ -465,7 +469,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #0563bb;
+  border-left: 2px solid #ABC4FF;
   position: relative;
 }
 .resume .resume-item h4 {
@@ -474,7 +478,7 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #0563bb;
+  color: #ABC4FF;
   margin-bottom: 10px;
 }
 .resume .resume-item h5 {
@@ -502,8 +506,8 @@ section {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #fff;
-  border: 2px solid #0563bb;
+  background: white;
+  border: 2px solid #ABC4FF;
 }
 
 /*--------------------------------------------------------------
@@ -517,7 +521,7 @@ section {
   margin: 0 auto 25px auto;
   list-style: none;
   text-align: center;
-  background: #fff;
+  background: white;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -534,7 +538,7 @@ section {
   transition: all 0.3s ease-in-out;
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #0563bb;
+  color: #ABC4FF;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -660,12 +664,12 @@ section {
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
-  background-color: #fff;
+  background-color: white;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #ABC4FF;
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #ABC4FF;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -705,7 +709,7 @@ section {
   text-align: center;
   padding: 70px 20px 80px 20px;
   transition: all ease-in-out 0.3s;
-  background: #fff;
+  background: white;
   box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
 }
 .services .icon-box .icon {
@@ -747,14 +751,14 @@ section {
   margin-bottom: 0;
 }
 .services .icon-box:hover {
-  border-color: #fff;
+  border-color: white;
   box-shadow: 0px 0 35px 0 rgba(0, 0, 0, 0.08);
 }
 .services .iconbox-blue i {
   color: #47aeff;
 }
 .services .iconbox-blue:hover .icon i {
-  color: #fff;
+  color: white;
 }
 .services .iconbox-blue:hover .icon path {
   fill: #47aeff;
@@ -763,7 +767,7 @@ section {
   color: #ffa76e;
 }
 .services .iconbox-orange:hover .icon i {
-  color: #fff;
+  color: white;
 }
 .services .iconbox-orange:hover .icon path {
   fill: #ffa76e;
@@ -772,7 +776,7 @@ section {
   color: #e80368;
 }
 .services .iconbox-pink:hover .icon i {
-  color: #fff;
+  color: white;
 }
 .services .iconbox-pink:hover .icon path {
   fill: #e80368;
@@ -781,7 +785,7 @@ section {
   color: #ffbb2c;
 }
 .services .iconbox-yellow:hover .icon i {
-  color: #fff;
+  color: white;
 }
 .services .iconbox-yellow:hover .icon path {
   fill: #ffbb2c;
@@ -790,7 +794,7 @@ section {
   color: #ff5828;
 }
 .services .iconbox-red:hover .icon i {
-  color: #fff;
+  color: white;
 }
 .services .iconbox-red:hover .icon path {
   fill: #ff5828;
@@ -799,7 +803,7 @@ section {
   color: #11dbcf;
 }
 .services .iconbox-teal:hover .icon i {
-  color: #fff;
+  color: white;
 }
 .services .iconbox-teal:hover .icon path {
   fill: #11dbcf;
@@ -820,7 +824,7 @@ section {
 .testimonials .testimonial-item .testimonial-img {
   width: 120px;
   border-radius: 50%;
-  border: 4px solid #fff;
+  border: 4px solid white;
   margin: 0 auto;
 }
 .testimonials .testimonial-item h3 {
@@ -860,12 +864,12 @@ section {
 .testimonials .swiper-pagination .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
-  background-color: #fff;
+  background-color: white;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #ABC4FF;
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #ABC4FF;
 }
 @media (min-width: 992px) {
   .testimonials .testimonial-item p {
@@ -878,11 +882,11 @@ section {
 --------------------------------------------------------------*/
 .contact .info {
   width: 100%;
-  background: #fff;
+  background: white;
 }
 .contact .info i {
   font-size: 20px;
-  color: #0563bb;
+  color: #ABC4FF;
   float: left;
   width: 44px;
   height: 44px;
@@ -910,19 +914,19 @@ section {
   margin-top: 40px;
 }
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #0563bb;
-  color: #fff;
+  background: #ABC4FF;
+  color: white;
 }
 .contact .php-email-form {
   width: 100%;
-  background: #fff;
+  background: white;
 }
 .contact .php-email-form .form-group {
   padding-bottom: 8px;
 }
 .contact .php-email-form .error-message {
   display: none;
-  color: #fff;
+  color: white;
   background: #ed3c0d;
   text-align: left;
   padding: 15px;
@@ -933,7 +937,7 @@ section {
 }
 .contact .php-email-form .sent-message {
   display: none;
-  color: #fff;
+  color: white;
   background: #18d26e;
   text-align: center;
   padding: 15px;
@@ -941,7 +945,7 @@ section {
 }
 .contact .php-email-form .loading {
   display: none;
-  background: #fff;
+  background: white;
   text-align: center;
   padding: 15px;
 }
@@ -969,15 +973,15 @@ section {
   padding: 10px 12px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #0563bb;
+  background: #ABC4FF;
   border: 0;
   padding: 10px 35px;
-  color: #fff;
+  color: white;
   transition: 0.4s;
   border-radius: 50px;
 }
 .contact .php-email-form button[type=submit]:hover {
-  background: #0678e3;
+  background: orange;
 }
 @-webkit-keyframes animate-loading {
   0% {
@@ -1026,8 +1030,8 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #0563bb;
-  color: #fff;
+  background: #ABC4FF;
+  color: white;
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
@@ -1038,8 +1042,8 @@ section {
   transition: 0.3s;
 }
 #footer .social-links a:hover {
-  background: #0678e3;
-  color: #fff;
+  background: orange;
+  color: white;
   text-decoration: none;
 }
 #footer .copyright {
