--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,10 +245,11 @@ h5 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
+  height: 75vh;
   background: url("../img/hero-bg.jpg") top right no-repeat;
   background-size: cover;
-  position: relative;
+  image-rendering: -webkit-optimize-contrast; 
+  background-position: relative;
 }
 @media (min-width: 992px) {
   #hero {
@@ -257,7 +258,7 @@ h5 {
 }
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.8);
+  /* background: rgba(255, 255, 255, 0.8); */
   position: absolute;
   bottom: 0;
   top: 0;
@@ -713,7 +714,11 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #f7f8f9;
+  width: 100%;
+  height: 40vh;
+  background: url("../img/footer.png") top right no-repeat;
+  background-size: cover;
+  position: top;
   color: #45505b;
   font-size: 14px;
   text-align: center;
