--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,8 @@ h1, h2, h3, h4, h6 {
 }
 
 h5 {
-  font-family: 'Nanum Pen Script', cursive;
+  font-family: 'Poppins', sans-serif;
+  font-size: 12px;
 }
 
 @media (min-width:320px) {
