--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,6 +348,12 @@ section.hero-home > .container::after {
   z-index: -1;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
